# rutas-optimas

./: .gitignore  CMakeLists.txt  README.md  checklist.md
docs/: enunciado.txt  seleccion_algoritmos.md
docs/superpowers/plans/: 2026-05-27-bolivia-road-network-algorithms-plan.md
docs/superpowers/specs/: 2026-05-24-graph-memory-layout-design.md  2026-05-27-bolivia-road-network-algorithms-design.md
include/: csv_parser.h  graph.h
src/: csv_parser.cpp  graph.cpp  main.cpp
