cmake_minimum_required(VERSION 3.20)
project(rutas-optimas VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

set(DEFAULT_BUILD_TYPE "Release" CACHE STRING "Build type: Debug or Release")
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "" FORCE)
endif()

include_directories(${CMAKE_SOURCE_DIR}/include)

file(GLOB GRAPH_SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
file(GLOB GRAPH_HEADERS "${CMAKE_SOURCE_DIR}/include/*.h")

add_executable(${PROJECT_NAME} ${GRAPH_SOURCES} ${GRAPH_HEADERS})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)